client/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.loginSignupForm {
  background-color: white;
  width: 23% !important;
  height: 55%;
  padding: 20px;
  position: absolute;
  left: 10%;
  top: 18%;
  border-radius: 10px;
  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.205);
  text-align: center;
}

.loginForm {
  align-items: center;
}

.loginSignBtn {
  background-color: #3cc295!important;  
}

.bottomDiv {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 20px;
}

input:focus::placeholder {
  color: transparent;
}

.loginFont {
  color: black;
  font-family: 'Roboto Slab', serif;
}

.error-text {
  color: red;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

